writing out form and questions

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en-us">
 
 <head>
-    <title>Trivia Game</title>
+    <title>Comic Trivia Game</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 
     <!-- Links to Bootstrap and JQuery -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -15,18 +14,29 @@
 </head>
 
 <body class="container">
-    <div id="timer">Time Remaining: 10</div>
+    <div id="timer">Time Remaining: 99</div>
     <div class="row">
         <div class="col-sm"></div>
-        <form class="col-sm">
+        <form class="col-sm-6">
             <p>Telekenisis is defined as the ability to...</p>
             <input type="radio" name="q1" value=""> read the minds of others<br>
             <input type="radio" name="q1" value=""> control fire<br>
             <input type="radio" name="q1" value=""> move objects with your mind<br>
             <input type="radio" name="q1" value=""> instantly heal your body<br>
-
-            <p></p>
-            <input type="radio" name="q2" value="">
+            <hr>
+            <p>Batmans parents were killed by...</p>
+            <input type="radio" name="q2" value="">Joe Chill<br>
+            <input type="radio" name="q2" value="">Mr. Freeze<br>
+            <input type="radio" name="q2" value="">The Cooler<br>
+            <input type="radio" name="q2" value="">Stone Cold Steve Austin<br>
+            <hr>
+            <p>In the Marvel comics, Nate Grey is the...</p>
+            <input type="radio" name="q3" value="">child of Scott Summers and Jean Grey<br>
+            <input type="radio" name="q3" value="">clone of an alternate version of Scott Summers and Jean Grey<br>
+            <input type="radio" name="q3" value="">clone of Scott Summers and Jean Grey<br>
+            <input type="radio" name="q3" value="">personification of the Marvel Universe<br>
+            <hr>
+            <input type="submit" value="submit">
         </form>
         <div class="col-sm"></div>
     </div>
