--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
 </head>
 
 <body class="container">
-    <div id="timer">Time Remaining: 99</div>
+    <div class="sticky-top" id="timeLord">
+        <p>Time</p>
+        <span class="rounded-circle" id="timer">99</span>
+        <p style="margin-top: 8px">Remaining</p>
+    </div>
+    <div class="row">
+        <h1 class="col-12 text-center">Comic Book Quiz</h1>
+
+    </div>
+    <hr>
     <div class="row">
         <div class="col-sm"></div>
-        <form class="col-sm-6">
+        <form class="col-sm-6" onsubmit="return quizChecker()">
             <p>Telekenisis is defined as the ability to...</p>
             <input type="radio" name="q1" value=""> read the minds of others<br>
             <input type="radio" name="q1" value=""> control fire<br>
@@ -35,6 +44,12 @@
             <input type="radio" name="q3" value="">clone of an alternate version of Scott Summers and Jean Grey<br>
             <input type="radio" name="q3" value="">clone of Scott Summers and Jean Grey<br>
             <input type="radio" name="q3" value="">personification of the Marvel Universe<br>
+            <hr>
+            <p>Spider-man is known for his often repeated saying, "With great power comes....."</p>
+            <input type="radio" name="q4" value="">great parties<br>
+            <input type="radio" name="q4" value="">great bacon<br>
+            <input type="radio" name="q4" value="">great responsibility<br>
+            <input type="radio" name="q4" value="">great odins raven<br>
             <hr>
             <input type="submit" value="submit">
         </form>
