--- a/index.html
+++ b/index.html
@@ -26,33 +26,36 @@
     <hr>
     <div class="row">
         <div class="col-sm"></div>
-        <form class="col-sm-6" onsubmit="return quizChecker()">
+        <form class="col-sm-6" id="quizForm" onsubmit="return quizChecker()">
+            <!--  -->
             <p>Telekenisis is defined as the ability to...</p>
-            <input type="radio" name="q1" value=""> read the minds of others<br>
-            <input type="radio" name="q1" value=""> control fire<br>
-            <input type="radio" name="q1" value=""> move objects with your mind<br>
-            <input type="radio" name="q1" value=""> instantly heal your body<br>
+            <input type="radio" id="q1" value="1"> read the minds of others<br>
+            <input type="radio" id="q1" value="2"> control fire<br>
+            <input type="radio" id="q1" value="3"> move objects with your mind<br>
+            <input type="radio" id="q1" value="4"> instantly heal your body<br>
             <hr>
             <p>Batmans parents were killed by...</p>
-            <input type="radio" name="q2" value="">Joe Chill<br>
-            <input type="radio" name="q2" value="">Mr. Freeze<br>
-            <input type="radio" name="q2" value="">The Cooler<br>
-            <input type="radio" name="q2" value="">Stone Cold Steve Austin<br>
+            <input type="radio" id="q2" value="5">Joe Chill<br>
+            <input type="radio" id="q2" value="6">Mr. Freeze<br>
+            <input type="radio" id="q2" value="7">The Cooler<br>
+            <input type="radio" id="q2" value="8">Stone Cold Steve Austin<br>
             <hr>
             <p>In the Marvel comics, Nate Grey is the...</p>
-            <input type="radio" name="q3" value="">child of Scott Summers and Jean Grey<br>
-            <input type="radio" name="q3" value="">clone of an alternate version of Scott Summers and Jean Grey<br>
-            <input type="radio" name="q3" value="">clone of Scott Summers and Jean Grey<br>
-            <input type="radio" name="q3" value="">personification of the Marvel Universe<br>
+            <input type="radio" id="q3" value="9">child of Scott Summers and Jean Grey<br>
+            <input type="radio" id="q3" value="10">clone of an alternate version of Scott Summers and Jean Grey<br>
+            <input type="radio" id="q3" value="11">clone of Scott Summers and Jean Grey<br>
+            <input type="radio" id="q3" value="12">personification of the Marvel Universe<br>
             <hr>
             <p>Spider-man is known for his often repeated saying, "With great power comes....."</p>
-            <input type="radio" name="q4" value="">great parties<br>
-            <input type="radio" name="q4" value="">great bacon<br>
-            <input type="radio" name="q4" value="">great responsibility<br>
-            <input type="radio" name="q4" value="">great odins raven<br>
+            <input type="radio" id="q4" value="13">great parties<br>
+            <input type="radio" id="q4" value="14">great bacon<br>
+            <input type="radio" id="q4" value="15">great responsibility<br>
+            <input type="radio" id="q4" value="16">great odins raven<br>
             <hr>
-            <input type="submit" value="submit">
+            <button id="test">Submit</button>
+            <!-- <input type="submit" value="submit"> -->
         </form>
+
         <div class="col-sm"></div>
     </div>
     <script src="assets/javascript/script.js"></script>
