--- a/Modal Test.html
+++ b/Modal Test.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <title>Comic Trivia Game</title>
+    <title>Modal Test</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -62,6 +62,8 @@
             <button id="test">Submit</button>
             <!-- <input type="submit" value="submit"> -->
         </form>
+
+        <!-- The Modal -->
         <div id="myModal" class="modal">
 
             <!-- Modal content -->
@@ -71,6 +73,7 @@
             </div>
 
         </div>
+
         <div class="col-sm"></div>
     </div>
     <script src="assets/javascript/script.js"></script>
