--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     </div>
     <hr>
-    <div class="row">
-        <div class="col-sm"></div>
+    <div class="row" style="background-color: rgba(255, 255, 255, 0.6)">
+        <div class=" col-sm"></div>
         <form class="col-sm-6" id="quizForm" onsubmit="return quizChecker()">
             <!--  -->
             <p>Telekenisis is defined as the ability to...</p>
